small fix: prevent CMS UI button causing flicker on page load - also temporarily removed youtube section from index.tmpl

--- a/src/cms/css/main.scss
+++ b/src/cms/css/main.scss
@@ -17,7 +17,8 @@
   width: 70px;
   padding: 0;
   margin:0;
-  position: fixed;
+  position: absolute;
+  top: 0;
   right: 0;
   z-index: 100;
   &:focus {
